[package]
name = "txn_lock"
version = "0.11.0"
authors = ["code@tinychain.net"]
edition = "2021"
description = "Utilities to support transactional versioning"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/haydnv/tinychain.git"

keywords = ["transaction", "transactional", "lock", "version", "versioning"]
categories = ["concurrency", "data-structures"]

[features]
all = ["hr-id", "logging"]
id = ["hr-id"]
logging = ["log"]

[dependencies]
collate = { path = "../collate", version = "0.4" }
ds-ext = { path = "../ds-ext", version = "0.4" }
hr-id = { path = "../hr-id", version = "0.7", optional = true }
futures = "0.3"
log = { version = "0.4", features = ["release_max_level_info"], optional = true }
tokio = { version = "1.49", features = ["sync", "rt"] }

[dev-dependencies]
futures = "0.3"
tokio = { version = "1.49", features = ["time"] }
